# flappy-clone

./: CMakeLists.txt  Makefile  README.md
src/: game.cpp  game.hpp  game_runner.cpp  game_runner.hpp  main.cpp  pipe.cpp  pipe.hpp  player.cpp  player.hpp  sounds.cpp  sounds.hpp  world.hpp
